chore: Support 1.21.4